# 3d_model_conversion

./: CMakeLists.txt
src/: main.cpp
